objects/bofc__BOFCBulkLeadConversion__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bofc__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bofc__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bofc__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BOFCBulkLeadConversion</label>
    <nameField>
        <displayFormat>BLC-{0000}</displayFormat>
        <label>BOFCBulkLeadConversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCBulkLeadConversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>